# ModLoader

./: .gitmodules  CMakeLists.txt  LICENSE  library.cpp  stdafx.h
src/: Memory.cpp  Memory.hpp  exception.hpp  httplib.hpp  library.cpp  md5.cpp  md5.hpp  stdafx.hpp  url.cpp  url.hpp  utils.cpp  utils.hpp
src/linker/: mod_file_link_info.hpp  mod_file_linker.cpp  mod_file_linker.hpp  mod_file_linker_exception.hpp
src/loader/: mod_loader_exception.hpp  mod_package.cpp  mod_package.hpp  mod_package_header.hpp  mod_package_item.cpp  mod_package_item.hpp  mod_package_loader.cpp  mod_package_loader.hpp  server_mod_loader.cpp  server_mod_loader.hpp
src/patches/: bypass_patches.hpp  custom_crash_handler.cpp  custom_crash_handler.hpp
src/server/: modding_info.cpp  modding_info.hpp  servertalk.cpp  servertalk.hpp  servertalkexception.hpp
src/types/: server_information.hpp
